--- a/4 Escala Competi.html
+++ b/4 Escala Competi.html
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="1 Principal.html"><img src="IMAGENES/SVG/home relleno.svg" alt="Home" width="25px" class="casa"></a></li>
+            <li><a href="index.html"><img src="IMAGENES/SVG/home relleno.svg" alt="Home" width="25px" class="casa"></a></li>
             <li><a href="2 Divisiones extremeños.html" >Resumen</a></li>
             <li><a href="Menú Rapido (Borrar).html">Indice</a></li>
             <li><a href="3 Historico.html" >Historia</a></li>
