Update Menú Rapido (Borrar).html

--- a/Menú Rapido (Borrar).html
+++ b/Menú Rapido (Borrar).html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <a href="1 Principal.html">Pagina 1 (Principal)</a>
+    <a href="index.html">Pagina 1 (Principal)</a>
     <br>
     <a href="2 Resumen.html">Pagina 2 (Resumen)</a>
     <br>
