--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 
     <div class="botones">
-        <button onclick="location.href='www.fexfutbol.com/pnfg/NPortada'"> <abbr title="Federación Extremeña de Fútbol">FEXFUT</abbr></button>
-        <button onclick="location.href='espanaestadios.com/category/extremadura/'">Estadios de Extremadura</button>
-        <button onclick="location.href='www.besoccer.com/Competition/copa_federacion'">Copa Federación</button>
+        <button onclick="location.href='https://www.fexfutbol.com/pnfg/NPortada'"> <abbr title="Federación Extremeña de Fútbol">FEXFUT</abbr></button>
+        <button onclick="location.href='https://www.espanaestadios.com/category/extremadura/'">Estadios de Extremadura</button>
+        <button onclick="location.href='https://www.besoccer.com/Competition/copa_federacion'">Copa Federación</button>
     </div>
     
     
