--- a/7 Clasificacion.html
+++ b/7 Clasificacion.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style7.css">
 </head>
+
+<!--Menú Superior-->
 <header>
     <nav>
         <ul>
@@ -24,10 +26,73 @@
 <body>
     <br>
     <details>
-        <summary><img src="IMAGENES/PNG/1ª_RFEF.png" alt="Logo" height="32px"> Primera RFEF</summary>
+        <summary><img src="IMAGENES/PNG/1ª_RFEF.png" alt="Logo" class="liga"> Primera RFEF</summary>
         <ul>
-            <li><img src="IMAGENES/PNG/Merida_C.P..png" alt="Escudo" height="25px"> AD Merida</li>
+            <li><img src="IMAGENES/PNG/Clasificaciones/Primera Federación.png" alt="Escudo" class="clasi" ></li>
         </ul>
+    </details>
+    <details>
+        <summary><img src="IMAGENES/PNG/2ª_RFEF.png" alt="Logo" class="liga"> Segunda RFEF</summary>
+        <div class="lado_lado">
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/Segunda Federación G.4.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/Segunda Federación G.5.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>    
+    </details>
+    <details>
+        <summary><img src="IMAGENES/PNG/3ª_RFEF.png" alt="Logo" class="liga"> Tercera RFEF</summary>
+        <ul>
+            <li><img src="IMAGENES/PNG/Clasificaciones/Tercera Federación.png" alt="Escudo" class="clasi" ></li>
+        </ul>
+    </details>
+    <details>
+        <summary><img src="IMAGENES/PNG/1ª_Extremeña.png" alt="Logo" class="liga"> Primera Regional</summary>
+        <div class="lado_lado">
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/1ª Regional G1.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/1ª Regional G2.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>
+        <br>
+        <div class="lado_lado">    
+            <ul>    
+                <li><img src="IMAGENES/PNG/Clasificaciones/1ª Regional G3.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+            <ul>       
+                <li><img src="IMAGENES/PNG/Clasificaciones/1ª Regional G4.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>
+    </details>
+    <details>
+    <summary><img src="IMAGENES/PNG/2ª_Extremeña.png" alt="Logo" class="liga"> Segunda Regional</summary>
+        <div class="lado_lado">
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/2ª Regional G1.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+            <ul>
+                <li><img src="IMAGENES/PNG/Clasificaciones/2ª Regional G2.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>
+        <br>
+        <div class="lado_lado">
+            <ul>    
+                <li><img src="IMAGENES/PNG/Clasificaciones/2ª Regional G3.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+            <ul>    
+                <li><img src="IMAGENES/PNG/Clasificaciones/2ª Regional G4.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>
+        <br>
+        <div class="lado_lado">
+            <ul>    
+                <li><img src="IMAGENES/PNG/Clasificaciones/2ª Regional G5.png" alt="Escudo" class="clasi" ></li>
+            </ul>
+        </div>
     </details>
 
 
