--- a/6 Formulario.html
+++ b/6 Formulario.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="Styles/style6.css">
 </head>
 
+<!--Menú Superior-->
 <header>
     <nav>
         <ul>
-            <li><a href="index.html"><img src="IMAGENES/SVG/home relleno.svg" alt="Home" width="25px" class="casa"></a></li>
-            <li><a href="2 Divisiones extremeños.html" >Resumen</a></li>
+            <li><a href="index.html"><img src="IMAGENES/SVG/Home Relleno.svg" alt="Home" class="logoup"></a></li>
+            <li><a href="2 Divisiones extremeños.html" ><img src="IMAGENES/SVG/Escudos.svg" alt="Equipos extremeños" class="logoup"></a></li>
             <li><a href="Menú Rapido (Borrar).html">Indice</a></li>
-            <li><a href="3 Historico.html" >Historia</a></li>
-            <li><a href="4 Escala Competi.html">Sistema de ligas</a></li>
-            <li><a href="5 Divisiones extremeños.html">Equipos</a></li>
-            <li><a href="7 Clasificacion.html">Clasificación</a></li>
+            <li><a href="3 Historico.html" ><img src="IMAGENES/SVG/folder-open.svg" alt="Historia" class="logoup"></a></li>
+            <li><a href="4 Escala Competi.html"><img src="IMAGENES/SVG/Piramide.svg" alt="Sistema de ligas" class="logoup"></a></li>
+            <li><a href="7 Clasificacion.html"><img src="IMAGENES/SVG/Clasificacion.svg" alt="Clasificación" class="logoup"></a></li>
             <img src="IMAGENES/PNG/logo.png" class="logo" height="120">
         </ul>
     </nav>
