--- a/7 Clasificacion.html
+++ b/7 Clasificacion.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina 6 (Clasificación)</title>
+    <title>Pagina 7 (Clasificación)</title>
     <meta http-equiv=refresh content=>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style7.css">
@@ -12,25 +12,29 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.html"><img src="IMAGENES/SVG/home relleno.svg" alt="Home" width="25px" class="casa"></a></li>
-            <li><a href="2 Divisiones extremeños.html" >Resumen</a></li>
+            <li><a href="index.html"><img src="IMAGENES/SVG/Home Relleno.svg" alt="Home" class="logoup"></a></li>
+            <li><a href="2 Divisiones extremeños.html" ><img src="IMAGENES/SVG/Escudos.svg" alt="Equipos extremeños" class="logoup"></a></li>
             <li><a href="Menú Rapido (Borrar).html">Indice</a></li>
-            <li><a href="3 Historico.html" >Historia</a></li>
-            <li><a href="4 Escala Competi.html">Sistema de ligas</a></li>
-            <li><a href="5 Divisiones extremeños.html">Equipos</a></li>
-            <li><a href="7 Clasificacion.html">Clasificación</a></li>
+            <li><a href="3 Historico.html" ><img src="IMAGENES/SVG/folder-open.svg" alt="Historia" class="logoup"></a></li>
+            <li><a href="4 Escala Competi.html"><img src="IMAGENES/SVG/Piramide.svg" alt="Sistema de ligas" class="logoup"></a></li>
+            <li><a href="7 Clasificacion.html"><img src="IMAGENES/SVG/Clasificacion.svg" alt="Clasificación" class="logoup"></a></li>
             <img src="IMAGENES/PNG/logo.png" class="logo" height="120">
         </ul>
     </nav>
 </header>
+
 <body>
     <br>
+
+    <!--Clasificación de Primera RFEF--> 
     <details>
         <summary><img src="IMAGENES/PNG/1ª_RFEF.png" alt="Logo" class="liga"> Primera RFEF</summary>
         <ul>
             <li><img src="IMAGENES/PNG/Clasificaciones/Primera Federación.png" alt="Escudo" class="clasi" ></li>
         </ul>
     </details>
+
+    <!--Clasificación de Segunda RFEF--> 
     <details>
         <summary><img src="IMAGENES/PNG/2ª_RFEF.png" alt="Logo" class="liga"> Segunda RFEF</summary>
         <div class="lado_lado">
@@ -42,12 +46,16 @@
             </ul>
         </div>    
     </details>
+
+    <!--Clasificación de Tercera RFEF-->
     <details>
         <summary><img src="IMAGENES/PNG/3ª_RFEF.png" alt="Logo" class="liga"> Tercera RFEF</summary>
         <ul>
             <li><img src="IMAGENES/PNG/Clasificaciones/Tercera Federación.png" alt="Escudo" class="clasi" ></li>
         </ul>
     </details>
+
+    <!--Clasificación de la Primera División Extremeña-->
     <details>
         <summary><img src="IMAGENES/PNG/1ª_Extremeña.png" alt="Logo" class="liga"> Primera Regional</summary>
         <div class="lado_lado">
@@ -68,6 +76,8 @@
             </ul>
         </div>
     </details>
+
+    <!--Clasificación de la Segunda División Extremeña-->
     <details>
     <summary><img src="IMAGENES/PNG/2ª_Extremeña.png" alt="Logo" class="liga"> Segunda Regional</summary>
         <div class="lado_lado">
@@ -95,8 +105,6 @@
         </div>
     </details>
 
-
-    
 
 </body>
 
